# static_map_generator_rust

./: Cargo.toml  LICENSE  README.md  package.xml
config/: scan_to_static_map.rviz
launch/: scan_to_static_map.launch.py
src/: main.rs
